[project]
name = "pd-code-rotate"
version = "0.0.1"
description = "given a link or knot，rotate its 2d diagram by changing its pd_code."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pd_code_sanity",
    "pd_code_pre_nxt"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
